// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/admin_console/data_retention_settings/custom_policy_form > should match snapshot with creating new policy 1`] = `
<div>
  <div
    class="wrapper--fixed DataRetentionSettings"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/compliance/data_retention_settings"
        />
        Custom Retention Policy
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="Card console expanded"
        >
          <div
            class="Card__header expanded"
          >
            <div>
              <div
                class="text-top"
              >
                Name and retention
              </div>
              <div
                class="text-bottom"
              >
                Give your policy a name and configure retention settings.
              </div>
            </div>
            <hr
              class="Card__hr"
            />
          </div>
          <div
            class="Card__body expanded expanding"
            style="height: 0px;"
          >
            <div
              class="CustomPolicy__fields"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_policyName"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Policy name"
                      class="Input form-control medium"
                      id="input_policyName"
                      name="policyName"
                      placeholder="Policy name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="DropdownInput hybrid_container"
                style="width: 100%;"
              >
                <fieldset
                  class="Input_fieldset Input_fieldset___legend"
                >
                  <legend
                    class="Input_legend Input_legend___focus"
                  >
                    Channel & direct message retention
                  </legend>
                  <div
                    class="Input_wrapper input_hybrid_wrapper"
                    style="max-width: 0;"
                  >
                    <input
                      class="Input form-control"
                      id="message_retention_input"
                      name="Input_message_retention"
                      placeholder="Channel & direct message retention"
                      type="number"
                      value=""
                    />
                  </div>
                  <div
                    class="Input_wrapper dropdown_hybrid_wrapper showInput"
                    style="width: 100%;"
                  >
                    <div
                      class="Input Input__focus css-b62m3t-container"
                      id="DropdownInput_message_retention"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-2-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        class="DropdownInput__controlContainer"
                      >
                        <div
                          class="message_retention__control css-1bhmcib-control"
                        >
                          <div
                            class="message_retention__value-container message_retention__value-container--has-value css-hlgwow"
                          >
                            <div
                              class="message_retention__single-value css-1dimb5e-singleValue"
                            >
                              <div>
                                <i
                                  class="icon icon-infinity option-icon"
                                />
                                <span
                                  class="option_forever"
                                >
                                  Keep forever
                                </span>
                              </div>
                            </div>
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-1s80ejz-dummyInput-DummyInput"
                              id="react-select-2-input"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="DropdownInput__indicatorsContainer"
                          >
                            <div
                              class="message_retention__indicators css-1wy0on6"
                            >
                              <i
                                class="icon icon-chevron-down"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Card console expanded"
        >
          <div
            class="Card__header expanded"
          >
            <div>
              <div
                class="text-top"
              >
                Assigned teams
              </div>
              <div
                class="text-bottom"
              >
                Add teams that will follow this retention policy.
              </div>
            </div>
            <button
              class="btn btn-primary"
            >
              Add teams
            </button>
            <hr
              class="Card__hr"
            />
          </div>
          <div
            class="Card__body expanded expanding"
            style="height: 0px;"
          >
            <div
              class="PolicyTeamsList"
            >
              <div
                class="DataGrid customTable"
              >
                <div
                  class="DataGrid_search"
                >
                  <div
                    class="DataGrid_searchBar"
                  >
                    <span
                      aria-hidden="true"
                      class="DataGrid_searchIcon"
                    >
                      <i
                        class="fa fa-search"
                        title="Search Icon"
                      />
                    </span>
                    <input
                      data-testid="searchInput"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <i
                      class="DataGrid_clearButton fa fa-times-circle hidden"
                      data-testid="clear-search"
                    />
                  </div>
                </div>
                <div
                  class="DataGrid_header"
                >
                  <div
                    class="DataGrid_cell"
                  >
                    Name
                  </div>
                  <div
                    class="DataGrid_cell"
                  />
                </div>
                <div
                  class="DataGrid_rows"
                >
                  <div
                    class="DataGrid_empty"
                  >
                    No items found
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Card console expanded"
        >
          <div
            class="Card__header expanded"
          >
            <div>
              <div
                class="text-top"
              >
                Assigned channels
              </div>
              <div
                class="text-bottom"
              >
                Add channels that will follow this retention policy.
              </div>
            </div>
            <button
              class="btn btn-primary"
            >
              Add channels
            </button>
            <hr
              class="Card__hr"
            />
          </div>
          <div
            class="Card__body expanded expanding"
            style="height: 0px;"
          >
            <div
              class="PolicyChannelsList"
            >
              <div
                class="DataGrid customTable"
              >
                <div
                  class="DataGrid_search"
                >
                  <div
                    class="DataGrid_searchBar"
                  >
                    <span
                      aria-hidden="true"
                      class="DataGrid_searchIcon"
                    >
                      <i
                        class="fa fa-search"
                        title="Search Icon"
                      />
                    </span>
                    <input
                      data-testid="searchInput"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <i
                      class="DataGrid_clearButton fa fa-times-circle hidden"
                      data-testid="clear-search"
                    />
                  </div>
                  <div
                    class="Filter"
                  >
                    <button
                      class="Filter_button"
                      type="button"
                    >
                      <i
                        class="Icon icon-filter-variant"
                      />
                      Filters
                    </button>
                    <div
                      class="Filter_content"
                    >
                      <div
                        class="Filter_header"
                      >
                        <div
                          class="Filter_title"
                        >
                          Filter by
                        </div>
                        <a
                          class="Filter_reset"
                        >
                          Reset filters
                        </a>
                      </div>
                      <hr />
                      <div
                        class="Filter_lists"
                      >
                        <div
                          class="FilterList FilterList__full"
                        >
                          <div
                            class="FilterList_name"
                          >
                            Teams
                          </div>
                          <div
                            class="css-b62m3t-container"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-3-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="filterListSelect__control css-13cymwt-control"
                            >
                              <div
                                class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                              >
                                <div
                                  class="filterListSelect__placeholder css-1jqq78o-placeholder"
                                  id="react-select-3-placeholder"
                                >
                                  Search and select teams
                                </div>
                                <div
                                  class="filterListSelect__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-3-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="filterListSelect__input"
                                    id="adminConsoleTeamFilterDropdown"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                              <div
                                class="filterListSelect__indicators css-1wy0on6"
                              >
                                <span
                                  class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                                />
                                <div
                                  aria-hidden="true"
                                  class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="css-tj5bde-Svg"
                                    focusable="false"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                  >
                                    <path
                                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="FilterList"
                        >
                          <div
                            class="FilterList_name"
                          >
                            Channels
                          </div>
                          <div
                            class="FilterList_item"
                          >
                            <div
                              class="FilterList_checkbox"
                            >
                              <label>
                                <input
                                  id="public"
                                  name="public"
                                  type="checkbox"
                                />
                                Public
                              </label>
                            </div>
                          </div>
                          <div
                            class="FilterList_item"
                          >
                            <div
                              class="FilterList_checkbox"
                            >
                              <label>
                                <input
                                  id="private"
                                  name="private"
                                  type="checkbox"
                                />
                                Private
                              </label>
                            </div>
                          </div>
                          <div
                            class="FilterList_item"
                          >
                            <div
                              class="FilterList_checkbox"
                            >
                              <label>
                                <input
                                  id="deleted"
                                  name="deleted"
                                  type="checkbox"
                                />
                                Archived
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                      <button
                        class="btn btn-primary btn-sm Filter_apply"
                        disabled=""
                        type="button"
                      >
                        Apply
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="DataGrid_header"
                >
                  <div
                    class="DataGrid_cell"
                  >
                    Name
                  </div>
                  <div
                    class="DataGrid_cell"
                  >
                    Team
                  </div>
                  <div
                    class="DataGrid_cell"
                  />
                </div>
                <div
                  class="DataGrid_rows"
                >
                  <div
                    class="DataGrid_empty"
                  >
                    No items found
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <a
        class="btn btn-tertiary"
        href="/admin_console/compliance/data_retention_settings"
      >
        Cancel
      </a>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/data_retention_settings/custom_policy_form > should match snapshot with editing existing policy 1`] = `
<div>
  <div
    class="wrapper--fixed DataRetentionSettings"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/compliance/data_retention_settings"
        />
        Custom Retention Policy
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="Card console expanded"
        >
          <div
            class="Card__header expanded"
          >
            <div>
              <div
                class="text-top"
              >
                Name and retention
              </div>
              <div
                class="text-bottom"
              >
                Give your policy a name and configure retention settings.
              </div>
            </div>
            <hr
              class="Card__hr"
            />
          </div>
          <div
            class="Card__body expanded expanding"
            style="height: 0px;"
          >
            <div
              class="CustomPolicy__fields"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_policyName"
                  >
                                            
                    Policy name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Policy name"
                      class="Input form-control medium Input__focus"
                      id="input_policyName"
                      name="policyName"
                      placeholder="Policy name"
                      type="text"
                      value="Test Policy"
                    />
                  </div>
                </div>
              </div>
              <div
                class="DropdownInput hybrid_container"
                style="width: 100%;"
              >
                <fieldset
                  class="Input_fieldset Input_fieldset___legend Input_fieldset___split"
                >
                  <legend
                    class="Input_legend Input_legend___focus"
                  >
                    Channel & direct message retention
                  </legend>
                  <div
                    class="Input_wrapper input_hybrid_wrapper showInput"
                    style="max-width: 10000px;"
                  >
                    <input
                      class="Input form-control"
                      id="message_retention_input"
                      name="Input_message_retention"
                      placeholder="Channel & direct message retention"
                      type="number"
                      value="22"
                    />
                  </div>
                  <div
                    class="Input_wrapper dropdown_hybrid_wrapper"
                    style="width: 95px;"
                  >
                    <div
                      class="Input Input__focus css-b62m3t-container"
                      id="DropdownInput_message_retention"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-4-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        class="DropdownInput__controlContainer"
                      >
                        <div
                          class="message_retention__control css-1bhmcib-control"
                        >
                          <div
                            class="message_retention__value-container message_retention__value-container--has-value css-hlgwow"
                          >
                            <div
                              class="message_retention__single-value css-1dimb5e-singleValue"
                            >
                              <span
                                class="option_days"
                              >
                                Days
                              </span>
                            </div>
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-1s80ejz-dummyInput-DummyInput"
                              id="react-select-4-input"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="DropdownInput__indicatorsContainer"
                          >
                            <div
                              class="message_retention__indicators css-1wy0on6"
                            >
                              <i
                                class="icon icon-chevron-down"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Card console expanded"
        >
          <div
            class="Card__header expanded"
          >
            <div>
              <div
                class="text-top"
              >
                Assigned teams
              </div>
              <div
                class="text-bottom"
              >
                Add teams that will follow this retention policy.
              </div>
            </div>
            <button
              class="btn btn-primary"
            >
              Add teams
            </button>
            <hr
              class="Card__hr"
            />
          </div>
          <div
            class="Card__body expanded expanding"
            style="height: 0px;"
          >
            <div
              class="PolicyTeamsList"
            >
              <div
                class="DataGrid customTable"
              >
                <div
                  class="DataGrid_search"
                >
                  <div
                    class="DataGrid_searchBar"
                  >
                    <span
                      aria-hidden="true"
                      class="DataGrid_searchIcon"
                    >
                      <i
                        class="fa fa-search"
                        title="Search Icon"
                      />
                    </span>
                    <input
                      data-testid="searchInput"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <i
                      class="DataGrid_clearButton fa fa-times-circle hidden"
                      data-testid="clear-search"
                    />
                  </div>
                </div>
                <div
                  class="DataGrid_header"
                >
                  <div
                    class="DataGrid_cell"
                  >
                    Name
                  </div>
                  <div
                    class="DataGrid_cell"
                  />
                </div>
                <div
                  class="DataGrid_rows"
                >
                  <div
                    class="DataGrid_empty"
                  >
                    No items found
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Card console expanded"
        >
          <div
            class="Card__header expanded"
          >
            <div>
              <div
                class="text-top"
              >
                Assigned channels
              </div>
              <div
                class="text-bottom"
              >
                Add channels that will follow this retention policy.
              </div>
            </div>
            <button
              class="btn btn-primary"
            >
              Add channels
            </button>
            <hr
              class="Card__hr"
            />
          </div>
          <div
            class="Card__body expanded expanding"
            style="height: 0px;"
          >
            <div
              class="PolicyChannelsList"
            >
              <div
                class="DataGrid customTable"
              >
                <div
                  class="DataGrid_search"
                >
                  <div
                    class="DataGrid_searchBar"
                  >
                    <span
                      aria-hidden="true"
                      class="DataGrid_searchIcon"
                    >
                      <i
                        class="fa fa-search"
                        title="Search Icon"
                      />
                    </span>
                    <input
                      data-testid="searchInput"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <i
                      class="DataGrid_clearButton fa fa-times-circle hidden"
                      data-testid="clear-search"
                    />
                  </div>
                  <div
                    class="Filter"
                  >
                    <button
                      class="Filter_button"
                      type="button"
                    >
                      <i
                        class="Icon icon-filter-variant"
                      />
                      Filters
                    </button>
                    <div
                      class="Filter_content"
                    >
                      <div
                        class="Filter_header"
                      >
                        <div
                          class="Filter_title"
                        >
                          Filter by
                        </div>
                        <a
                          class="Filter_reset"
                        >
                          Reset filters
                        </a>
                      </div>
                      <hr />
                      <div
                        class="Filter_lists"
                      >
                        <div
                          class="FilterList FilterList__full"
                        >
                          <div
                            class="FilterList_name"
                          >
                            Teams
                          </div>
                          <div
                            class="css-b62m3t-container"
                          >
                            <span
                              class="css-1f43avz-a11yText-A11yText"
                              id="react-select-5-live-region"
                            />
                            <span
                              aria-atomic="false"
                              aria-live="polite"
                              aria-relevant="additions text"
                              class="css-1f43avz-a11yText-A11yText"
                              role="log"
                            />
                            <div
                              class="filterListSelect__control css-13cymwt-control"
                            >
                              <div
                                class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                              >
                                <div
                                  class="filterListSelect__placeholder css-1jqq78o-placeholder"
                                  id="react-select-5-placeholder"
                                >
                                  Search and select teams
                                </div>
                                <div
                                  class="filterListSelect__input-container css-19bb58m"
                                  data-value=""
                                >
                                  <input
                                    aria-activedescendant=""
                                    aria-autocomplete="list"
                                    aria-describedby="react-select-5-placeholder"
                                    aria-expanded="false"
                                    aria-haspopup="true"
                                    autocapitalize="none"
                                    autocomplete="off"
                                    autocorrect="off"
                                    class="filterListSelect__input"
                                    id="adminConsoleTeamFilterDropdown"
                                    role="combobox"
                                    spellcheck="false"
                                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                    tabindex="0"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                              <div
                                class="filterListSelect__indicators css-1wy0on6"
                              >
                                <span
                                  class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                                />
                                <div
                                  aria-hidden="true"
                                  class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="css-tj5bde-Svg"
                                    focusable="false"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                  >
                                    <path
                                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="FilterList"
                        >
                          <div
                            class="FilterList_name"
                          >
                            Channels
                          </div>
                          <div
                            class="FilterList_item"
                          >
                            <div
                              class="FilterList_checkbox"
                            >
                              <label>
                                <input
                                  id="public"
                                  name="public"
                                  type="checkbox"
                                />
                                Public
                              </label>
                            </div>
                          </div>
                          <div
                            class="FilterList_item"
                          >
                            <div
                              class="FilterList_checkbox"
                            >
                              <label>
                                <input
                                  id="private"
                                  name="private"
                                  type="checkbox"
                                />
                                Private
                              </label>
                            </div>
                          </div>
                          <div
                            class="FilterList_item"
                          >
                            <div
                              class="FilterList_checkbox"
                            >
                              <label>
                                <input
                                  id="deleted"
                                  name="deleted"
                                  type="checkbox"
                                />
                                Archived
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                      <button
                        class="btn btn-primary btn-sm Filter_apply"
                        disabled=""
                        type="button"
                      >
                        Apply
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="DataGrid_header"
                >
                  <div
                    class="DataGrid_cell"
                  >
                    Name
                  </div>
                  <div
                    class="DataGrid_cell"
                  >
                    Team
                  </div>
                  <div
                    class="DataGrid_cell"
                  />
                </div>
                <div
                  class="DataGrid_rows"
                >
                  <div
                    class="DataGrid_empty"
                  >
                    No items found
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <a
        class="btn btn-tertiary"
        href="/admin_console/compliance/data_retention_settings"
      >
        Cancel
      </a>
    </div>
  </div>
</div>
`;
